Fixed View padding top on small screens

--- a/src/styles/components/view/view.module.scss
+++ b/src/styles/components/view/view.module.scss
@@ -196,8 +196,8 @@
   }
 
   @include screen.small {
-    margin-top: 6.25rem;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+    padding-top: 6.25rem;
   }
 }
